# morok

./: .gitignore  README.md  cross_build.sh  foo.toml  run_tests.sh
.github/: llvm-trunk.env
.github/actions/setup-llvm/: action.yml
.github/workflows/: ci.yml  llvm-bump.yml
crackmes/zorya/: build-morok.sh  morok-linux-static.toml  zorya.c
docs/: algorithms.md  insurance-tasks.md
include/morok/config/: PassConfig.hpp
include/morok/ir/: InstUtil.hpp  SymbolCloak.hpp
include/morok/passes/: AntiAnalysis.hpp  CallerKeyedDispatch.hpp  CodeRegionKdf.hpp  ConstantEncryption.hpp  DataFlowIntegrity.hpp  ExternalOpaquePredicates.hpp  FunctionCallObfuscate.hpp  HashGatedSelfDecrypt.hpp  OptimizerAmplification.hpp  PathExplosion.hpp  PerBuildPolymorphism.hpp  ReturnlessDispatch.hpp  RuntimeSeal.hpp  SealedBlob.hpp  SelfChecksumConstants.hpp  ShamirShare.hpp  StringEncryption.hpp  SubThresholdPersistence.hpp  UniformPrimitiveLowering.hpp  VTableIntegrity.hpp  VectorObfuscation.hpp  Virtualization.hpp
include/morok/runtime/: PlatformRuntime.hpp
programs/: 01_hello_world.c  02_fibonacci.c  03_linked_list.c  04_bst.cpp  05_thread_pool.cpp  06_allocator.c  07_regex.c  08_json_parser.cpp  09_bytecode_vm.c  10_template_madness.cpp  asm_arch_detect.c  asm_atomic_ops.c  asm_barriers.c  asm_context_switch.c  asm_syscall_raw.c  call_many_float_args.c  call_many_int_args.c  call_mixed_aggregates.c  call_mixed_args.c  call_nested.c  call_struct_byval.cpp  call_struct_return.c  call_tail_recursive.c  call_variadic.c  cf_computed_goto.c  cf_exception.cpp  cf_indirect_call.c  cf_musttail.cpp  cf_setjmp.c  cf_switch_dense.c  cf_switch_sparse.c  cpp_lambda.cpp  cpp_rtti.cpp  cpp_virtual.cpp  fp_dsp_filter.c  fp_fft.c  fp_mandelbrot.c  fp_neural_layer.c  fp_physics_sim.c  int_atomic_orders.c  (+34 more)
src/config/: Preset.cpp  Resolver.cpp  TomlLoader.cpp
src/ir/: CMakeLists.txt  InstUtil.cpp  SymbolCloak.cpp
src/passes/: AdversarialFunctionMerging.cpp  AntiAnalysis.cpp  ArithmeticTables.cpp  CMakeLists.txt  CallerKeyedDispatch.cpp  CodeRegionKdf.cpp  CoherentDecoys.cpp  ConstantEncryption.cpp  DataFlowIntegrity.cpp  DecoyStrings.cpp  EnvBindingKdf.cpp  ExternalOpaquePredicates.cpp  ExternalSecretBinding.cpp  FunctionCallObfuscate.cpp  HashGatedSelfDecrypt.cpp  MicrocodeStress.cpp  MutualGuardGraph.cpp  OptimizerAmplification.cpp  PathExplosion.cpp  PerBuildPolymorphism.cpp  PhiTangling.cpp  PointerLaundering.cpp  ReturnlessDispatch.cpp  RuntimeSeal.cpp  SealedBlob.cpp  SelfChecksumConstants.cpp  ShamirShare.cpp  StringEncryption.cpp  SubThresholdPersistence.cpp  TraceKeying.cpp  TracerAttestation.cpp  TypePunning.cpp  VTableIntegrity.cpp  VectorObfuscation.cpp  Virtualization.cpp
src/pipeline/: CMakeLists.txt  Plugin.cpp  Scheduler.cpp
src/runtime/: PlatformRuntime.cpp
tests/e2e/: CMakeLists.txt  adversarial_binary.py  adversarial_patch.sh  boundary_trace_audit.py  caller_keyed_dispatch_adversarial.toml  compile_programs.sh  cross_build_clean.sh  cross_build_empty_sysroot.sh  cross_build_platform_defaults.sh  cross_build_seed.sh  differential.sh  max.toml  release_audit_test.py  run_programs.sh  static_config_layering.sh  timing_false_positive_clean_run.sh  tracerpid_zero_clean.sh  tracerpid_zero_clean_no_selftrace.toml  tracerpid_zero_clean_selftrace.toml  vm.toml
tests/e2e/fixtures/: caller_keyed_dispatch.c  tracerpid_zero_clean.c
tests/ir/: CMakeLists.txt  test_passes.cpp
tests/unit/config/: test_merge.cpp  test_preset.cpp  test_resolve.cpp  test_toml_loader.cpp
tests/unit/core/: test_galois8.cpp  test_xorshare.cpp
tools/: morok-audit.py
